[package]
name = "equilibrium-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Casey DiGennaro <casey@deckboss.ai>"]
description = "Constraint grammar for human-machine conversation navigation"
license = "MIT"
repository = "https://github.com/SuperInstance/equilibrium-tokens"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "equilibrium-daemon"
path = "src/main.rs"
